<?xml version="1.0"?>
<package format="2">
  <name>rplidar_ros</name>
  <version>0.0.0</version>
  <description>The rplidar ros package, support rplidar A2/A1 and A3</description>
  
  <maintainer email="paul.llitjos@todo.todo">paul.llitjos</maintainer>
  <maintainer email="ros@slamtec.com">Slamtec ROS Maintainer</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <!--    <run_depend>roscpp</run_depend>   -->
  <!--    <run_depend>rosconsole</run_depend>  -->
  <!--    <run_depend>sensor_msgs</run_depend>  -->
  <!--    <run_depend>std_srvs</run_depend>  --> 
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
    
  
</package>
  
  
  


  
  
